Add chase event tracker tab with UI and backend support

--- a/lang/en.json
+++ b/lang/en.json
@@ -88,26 +88,26 @@
         "LocationTotalsHidden": "Total: —",
         "LocationUnlimited": "∞",
         "LocationsHeading": "Research Sites",
-        "LocationReveal": "Reveal Location",
-        "LocationRevealResend": "Resend Reveal",
-        "LocationRevealMessageHeader": "{topic}: {location}",
-        "LocationRevealLog": "Revealed {location} for {topic}.",
-        "LocationResendLog": "Resent reveal for {location} in {topic}.",
-        "LocationRevealChecks": "Checks",
-        "LocationRevealVisible": "Visible to players",
-        "LocationRevealVisibleHint": "Display this location to players in the research tracker.",
-        "LocationRevealAssignments": "Assigned Party Members",
-        "ManageLocations": "Manage Locations",
-        "ManageLocationsCreate": "Create New Location",
-        "ManageLocationsHint": "Select a location to edit or choose Create New to add another site.",
-        "ManageLocationsMissing": "The selected location could not be found.",
-        "ManageLocationsOpen": "Open Editor",
-        "ManageLocationsSelect": "Manage Location",
-        "LocationMissingSkill": "Set a skill for this location before posting a check.",
-        "LocationMissingDC": "Set a DC for this location before posting a check.",
-        "Log": "Research Log",
-        "NoActor": "Unable to locate the selected actor.",
-        "NoLocations": "No locations defined yet.",
+      "LocationReveal": "Reveal Location",
+      "LocationRevealResend": "Resend Reveal",
+      "LocationRevealMessageHeader": "{topic}: {location}",
+      "LocationRevealLog": "Revealed {location} for {topic}.",
+      "LocationResendLog": "Resent reveal for {location} in {topic}.",
+      "LocationRevealChecks": "Checks",
+      "LocationRevealVisible": "Visible to players",
+      "LocationRevealVisibleHint": "Display this location to players in the research tracker.",
+      "LocationRevealAssignments": "Assigned Party Members",
+      "ManageLocations": "Manage Locations",
+      "ManageLocationsCreate": "Create New Location",
+      "ManageLocationsHint": "Select a location to edit or choose Create New to add another site.",
+      "ManageLocationsMissing": "The selected location could not be found.",
+      "ManageLocationsOpen": "Open Editor",
+      "ManageLocationsSelect": "Manage Location",
+      "LocationMissingSkill": "Set a skill for this location before posting a check.",
+      "LocationMissingDC": "Set a DC for this location before posting a check.",
+      "Log": "Research Log",
+      "NoActor": "Unable to locate the selected actor.",
+      "NoLocations": "No locations defined yet.",
         "NoLog": "No research activity recorded yet.",
         "NoPartyMembers": "No party members are currently available.",
         "NoTopics": "No research topics have been created.",
@@ -144,9 +144,58 @@
         "ThresholdPointsLabel": "Threshold Points",
         "ThresholdLocked": "Locked",
         "ThresholdPoints": "Reveal at {points} RP",
-        "ThresholdRevealed": "Sent",
-        "ThresholdUnlocked": "Unlocked",
-        "Thresholds": "Threshold Reveals"
+      "ThresholdRevealed": "Sent",
+      "ThresholdUnlocked": "Unlocked",
+      "Thresholds": "Threshold Reveals"
+      },
+      "Chase": {
+        "Title": "Chase Events",
+        "CreateEvent": "Create Chase Event",
+        "Create": "Create",
+        "EditEvent": "Edit Chase Event",
+        "Save": "Save",
+        "DeleteEvent": "Delete Chase Event",
+        "DeleteEventConfirm": "Are you sure you want to delete this chase event?",
+        "DefaultEventName": "Chase Event",
+        "AddObstacle": "Add Obstacle",
+        "AddOpportunity": "Add Opportunity",
+        "CreateObstacle": "Create Obstacle",
+        "EditObstacle": "Edit Obstacle",
+        "DeleteObstacle": "Delete Obstacle",
+        "DeleteObstacleConfirm": "Are you sure you want to delete this obstacle?",
+        "DefaultObstacleName": "Obstacle",
+        "SetObstacleProgress": "Set Progress",
+        "CreateOpportunity": "Create Opportunity",
+        "EditOpportunity": "Edit Opportunity",
+        "DeleteOpportunity": "Delete Opportunity",
+        "DeleteOpportunityConfirm": "Are you sure you want to delete this opportunity?",
+        "DefaultOpportunityName": "Opportunity",
+        "EventName": "Event Name",
+        "EventDescription": "Event Description",
+        "ObstacleName": "Obstacle Name",
+        "ObstacleRequiredPoints": "Required Chase Points",
+        "ObstacleDescription": "Obstacle Description",
+        "ObstacleProgress": "Current Progress",
+        "ObstacleProgressLabel": "{progress} / {required} Chase Points",
+        "ObstacleProgressOpen": "{progress} Chase Points",
+        "ObstacleProgressHeader": "Progress",
+        "ObstacleNameHeader": "Obstacle",
+        "ObstaclesHeading": "Obstacles",
+        "ObstacleComplete": "Cleared",
+        "OpportunitiesHeading": "Opportunities",
+        "OpportunityName": "Opportunity Name",
+        "OpportunityDescription": "Opportunity Description",
+        "AssignmentsLabel": "Assigned Participants",
+        "AssignmentsEmpty": "No participants assigned.",
+        "AssignmentsHint": "Drag actors or tokens here to assign participants.",
+        "AssignmentInactive": "Unavailable",
+        "RemoveAssignment": "Remove assignment",
+        "Actions": "Actions",
+        "NoObstacles": "No obstacles have been added yet.",
+        "NoOpportunities": "No opportunities have been added yet.",
+        "ParticipantsHeading": "Participants",
+        "NoEvents": "No chase events have been created yet.",
+        "NoTracker": "The chase tracker is not available in this world."
       },
       "Reputation": {
         "Title": "Reputation",
