Add influence tracker and UI integration

--- a/lang/en.json
+++ b/lang/en.json
@@ -195,7 +195,83 @@
         "NoOpportunities": "No opportunities have been added yet.",
         "ParticipantsHeading": "Participants",
         "NoEvents": "No chase events have been created yet.",
-        "NoTracker": "The chase tracker is not available in this world."
+      "NoTracker": "The chase tracker is not available in this world."
+      },
+      "Influence": {
+        "Title": "Influence",
+        "PanelTitle": "Influence Tracker",
+        "CreateNpc": "Create NPC",
+        "Create": "Create",
+        "Save": "Save",
+        "Edit": "Edit",
+        "EditNpc": "Edit NPC",
+        "Delete": "Delete",
+        "ManageSkills": "Manage Skills",
+        "ManageThresholds": "Manage Thresholds",
+        "DeleteNpc": "Delete NPC",
+        "DeleteNpcConfirm": "Are you sure you want to remove {name}?",
+        "AdjustmentNotification": "{name} now has {value} influence points.",
+        "DefaultNpcName": "New NPC",
+        "NpcName": "Name",
+        "NameRequired": "Enter a name for this NPC.",
+        "CurrentInfluence": "Current Influence",
+        "MaxInfluenceLabel": "Maximum Influence",
+        "MaxInfluence": "Maximum Influence: {value}",
+        "MaxInfluenceUnlimited": "No maximum",
+        "BaseDC": "Base DC",
+        "BaseDCLabel": "Base DC: {dc}",
+        "BaseDCMissing": "No base DC set",
+        "PenaltyText": "Penalty Text",
+        "PenaltyHeader": "Penalty",
+        "Notes": "Notes",
+        "NotesHeader": "Notes",
+        "Progress": "Influence Progress",
+        "Set": "Set Value",
+        "SetInfluence": "Set Influence",
+        "SetInfluenceFor": "Set influence for {name}",
+        "SkillHeader": "Skills & DCs",
+        "SkillName": "Skill",
+        "SkillDC": "DC",
+        "SkillDCValue": "DC {dc}",
+        "SkillHint": "Leave fields blank to remove unused skills.",
+        "ThresholdHeader": "Reveal Thresholds",
+        "ThresholdPoints": "Reveal at {points} Influence",
+        "ThresholdPointsLabel": "Threshold Points",
+        "ThresholdGmText": "GM Notes",
+        "ThresholdPlayerText": "Player Reveal Text",
+        "ThresholdHint": "Leave unused rows blank to remove thresholds.",
+        "ThresholdUnlocked": "Unlocked",
+        "ThresholdLocked": "Locked",
+        "ThresholdRevealed": "Revealed",
+        "ThresholdHidden": "Hidden",
+        "RevealThreshold": "Reveal",
+        "HideThreshold": "Hide",
+        "AddNpcLog": "Add NPC Log Entry",
+        "NpcLogHeader": "NPC Log",
+        "AddLogEntry": "Add Log Entry",
+        "EditLogEntry": "Edit Log Entry",
+        "DeleteLogEntry": "Delete Log Entry",
+        "DeleteLogConfirm": "Are you sure you want to remove this log entry?",
+        "LogNpc": "Associated NPC",
+        "LogNoNpc": "None",
+        "LogTypeLabel": "Entry Type",
+        "LogType": {
+          "adjustment": "Adjustment",
+          "note": "Note",
+          "info": "Info"
+        },
+        "LogReason": "Reason",
+        "LogNote": "Details",
+        "LogUnknownNpc": "Unknown NPC",
+        "TotalAfter": "Total Influence: {total}",
+        "LastUpdated": "Updated",
+        "SessionLog": "Session Log",
+        "NoLogEntries": "No log entries recorded yet.",
+        "NoNpcs": "No NPCs have been added yet.",
+        "Disabled": "The influence tracker is not available.",
+        "AddNpc": "Add NPC",
+        "PanelDescription": "Track NPC influence, skill DCs, and reveal thresholds.",
+        "BaseDCMissingShort": "—"
       },
       "Reputation": {
         "Title": "Reputation",
