Add traits support to influence NPCs

--- a/lang/en.json
+++ b/lang/en.json
@@ -221,6 +221,9 @@
         "BaseDC": "Base DC",
         "BaseDCLabel": "Base DC: {dc}",
         "BaseDCMissing": "No base DC set",
+        "TraitsLabel": "Traits",
+        "TraitsHeader": "Traits",
+        "TraitsPlaceholder": "Diplomacy, Noble, ...",
         "PenaltyText": "Penalty Text",
         "PenaltyHeader": "Penalty",
         "Notes": "Notes",
