Add discovery and influence check notes to NPCs

--- a/lang/en.json
+++ b/lang/en.json
@@ -224,6 +224,12 @@
         "TraitsLabel": "Traits",
         "TraitsHeader": "Traits",
         "TraitsPlaceholder": "Diplomacy, Noble, ...",
+        "DiscoveryChecksLabel": "Discovery Checks",
+        "DiscoveryChecksHeader": "Discovery Checks",
+        "DiscoveryChecksPlaceholder": "Notable discovery skill checks or guidance.",
+        "InfluenceChecksLabel": "Influence Checks",
+        "InfluenceChecksHeader": "Influence Checks",
+        "InfluenceChecksPlaceholder": "Recommended influence skill checks or tactics.",
         "PenaltyText": "Penalty Text",
         "PenaltyHeader": "Penalty",
         "Notes": "Notes",
