feat: allow adding influence skill rows dynamically

--- a/lang/en.json
+++ b/lang/en.json
@@ -243,6 +243,7 @@
         "SkillDC": "DC",
         "SkillDCValue": "DC {dc}",
         "SkillHint": "Leave fields blank to remove unused skills.",
+        "AddSkillRow": "Add Skill",
         "ThresholdHeader": "Reveal Thresholds",
         "ThresholdPoints": "Reveal at {points} Influence",
         "ThresholdPointsLabel": "Threshold Points",
