Add portraits to research topics

--- a/lang/en.json
+++ b/lang/en.json
@@ -65,6 +65,10 @@
         "LocationAssignmentsDropPrompt": "Drag party members here to assign.",
         "LocationAssignmentsEmpty": "No party members assigned yet.",
         "LocationAssignmentsRemove": "Remove assignment",
+        "TopicPortraitHint": "Drop a portrait or click to choose.",
+        "TopicPortraitAlt": "{name} portrait",
+        "TopicPortraitClear": "Clear portrait",
+        "TopicPortraitBrowse": "Choose portrait image",
         "LocationList": "Locations",
         "LocationListHint": "Define the research sites, their maximum points, and any starting progress.",
         "LocationLogSuffix": " ({location})",
